--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "typeorm": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm -d ./src/typeorm/data-source.ts"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
