--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ PORT=4000
 POSTGRES_PASSWORD=password
 POSTGRES_USER=user
 POSTGRES_DB_NAME=myDB
-POSTGRES_PORT=5000
-POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_HOST=100.100.100.4
