--- a/.env
+++ b/.env
@@ -7,5 +7,8 @@ POSTGRES_PORT=5000
 POSTGRES_HOST=localhost
 
 SALTROUND=10
+
 JWT_CONST=secret key
-EXP=60
+EXP=60s
+JWT_REFRESH_CONST=secret refresh key
+REFRESH_EXP=2m
