feat: implement logging of the request and responses to the console

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ POSTGRES_HOST=localhost
 SALTROUND=10
 
 JWT_CONST=secret key
-EXP=60s
+EXP=5m
 JWT_REFRESH_CONST=secret refresh key
-REFRESH_EXP=2m
+REFRESH_EXP=12h
+
+LOG_MODE=console
+LOG_LEVEL=1
