feat: implement logging into files

--- a/.env
+++ b/.env
@@ -13,5 +13,10 @@ EXP=5m
 JWT_REFRESH_CONST=secret refresh key
 REFRESH_EXP=12h
 
-LOG_MODE=console
+LOG_MODE=file
 LOG_LEVEL=1
+PATH_TO_LOGS=./logs/
+LOG_FILE_NAME=logs
+ERROR_FILE_NAME=errors
+LOGS_MAX_SIZE=1
+ERRORS_MAX_SIZE=1
